terraform: stackone-jenkins-slaves: remove deprecated jenkins swarm slave startup script